fix both Add user and users Dark mode

--- a/src/Pages/Users/users2.scss
+++ b/src/Pages/Users/users2.scss
@@ -1,10 +1,10 @@
 .TableBody {
-  background-color: #5bb9b8;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   color: #fff;
   font-family: "Lato", sans-serif;
 }
+
 .Table {
   width: 90%;
   margin: auto;
@@ -15,13 +15,17 @@
   }
   
   main {
+  
     background-color: #2c3845;
   }
   
   h1 {
+    color: #2c3845;
     text-align: center;
     font-weight: 300;
   }
+
+
   
   table {
     display: block;
@@ -241,5 +245,39 @@
       padding: 10px;
     }
   }
+
+  .select {
+    margin-top: 20px;
+    color: #fff;
+    background-color: #2c3845;
+    border: 1px solid #202932;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: "Lato", sans-serif;
+    font-size: 1.2rem;
+    
+  
+    &:focus {
+      border-color: #4b908f;
+      outline: none;
+    }
+  }
+  
+  .select option {
+    background-color: #2c3845;
+    color: #fff;
+    font-family: "Lato", sans-serif;
+    font-size: 1.2rem;
+  }
+
+}
+[theme="Dark"]{
+  .Table {
+  h1 {
+   color: #ffffff;
+   
+ }
+}
+
 }
 
